<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">PickUApp</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="welcome">Welcome to PickUApp!</string>
    <string name="choose_driver">Driver</string>
    <string name="choose_hitchhiker">Hitchhiker</string>
    <string name="abort">Abort</string>
    <string name="title_activity_hitchhiker_set_route">HitchhikerSetRoute</string>
    <string name="title_activity_driver_set_route">DriverSetRouteActivity</string>
    <string name="title_activity_driver_matchmaker">DriverMatchmakerActivity</string>
    <string name="title_activity_hitchhiker_matchmaker">HitchhikerMatchmakerActivity</string>
    <string name="title_activity_master">MasterActivity</string>


    <string name="time_and_date">00:00 01/01-14</string>
    <string name="title_activity_driver_response">DriverResponseActivity</string>
    <string name="title_activity_hitchhiker_response">HitchhikerResponseActivity</string>
    <string name="title_activity_hitchhiker_wait_response">HitchhikerWaitResponseActivity</string>
    <string name="title_maps_activity">MapsActivity</string>
    <string name="title_activity_show_map">ShowMap</string>

    <string name="set_from_desc">From:</string>
    <string name="set_from_hint">Chalmers tvärgata 4</string>
    <string name="set_to_desc">To:</string>
    <string name="set_to_hint">Kviberg 4</string>
    <string name="set_done">Done!</string>
    <string name="title_activity_display_info">DisplayInfoActivity</string>

</resources>
